[package]
name = "adventofcode21"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "day1"
path = "src/day_1.rs"

[[bin]]
name = "day2"
path = "src/day_2.rs"

[[bin]]
name = "day3"
path = "src/day_3.rs"


[[bin]]
name = "day4"
path = "src/day_4.rs"

[[bin]]
name = "day5"
path = "src/day_5.rs"


[[bin]]
name = "day6"
path = "src/day_6.rs"

[[bin]]
name = "day7"
path = "src/day_7.rs"

[[bin]]
name = "day8"
path = "src/day_8.rs"

[[bin]]
name = "day9"
path = "src/day_9.rs"

[[bin]]
name = "day10"
path = "src/day_10.rs"

[[bin]]
name = "day11"
path = "src/day_11.rs"

[[bin]]
name = "day12"
path = "src/day_12.rs"

[[bin]]
name = "day13"
path = "src/day_13.rs"

[[bin]]
name = "day14"
path = "src/day_14.rs"

[[bin]]
name = "day15"
path = "src/day_15.rs"

[[bin]]
name = "day16"
path = "src/day_16.rs"

[[bin]]
name = "day17"
path = "src/day_17.rs"

[[bin]]
name = "day18"
path = "src/day_18.rs"

[[bin]]
name = "day19"
path = "src/day_19.rs"

[[bin]]
name = "day20"
path = "src/day_20.rs"

[[bin]]
name = "day21"
path = "src/day_21.rs"

[[bin]]
name = "day22"
path = "src/day_22.rs"

[dependencies]
itertools = "0.10"
rayon = "1.5"
pathfinding = "3.0.5"
regex = "1.5.4"
